--- a/server/pdfviewer/web/viewer.css
+++ b/server/pdfviewer/web/viewer.css
@@ -284,14 +284,11 @@
   direction: ltr;
   width: 816px;
   height: 1056px;
-  margin: 1px auto -8px auto;
+  margin: 14px auto;
   position: relative;
   overflow: visible;
-  border: 9px solid transparent;
+  border: 1px solid #ccc;
   background-clip: content-box;
-  -webkit-border-image: url(images/shadow.png) 9 9 repeat;
-       -o-border-image: url(images/shadow.png) 9 9 repeat;
-          border-image: url(images/shadow.png) 9 9 repeat;
   background-color: white;
 }
 
@@ -365,7 +362,8 @@
   top: 0;
   right: 0;
   bottom: 0;
-  background: url('images/loading-icon.gif') center no-repeat;
+  width: 200px;
+  background: url('/assets/images/loader.svg') center no-repeat;
 }
 
 .pdfPresentationMode .pdfViewer {
@@ -422,8 +420,7 @@ html {
 body {
   height: 100%;
   width: 100%;
-  background-color: #404040;
-  background-image: url(images/texture.png);
+  background-color: #fff;
 }
 
 body,
@@ -447,13 +444,13 @@ select {
 }
 
 #viewerContainer.pdfPresentationMode:-ms-fullscreen::-ms-backdrop {
-  background-color: #000;
+  background-color: #fff;
 }
 
 #viewerContainer.pdfPresentationMode:-webkit-full-screen {
   top: 0px;
   border-top: 2px solid transparent;
-  background-color: #000;
+  background-color: #fff;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -465,7 +462,7 @@ select {
 #viewerContainer.pdfPresentationMode:-moz-full-screen {
   top: 0px;
   border-top: 2px solid transparent;
-  background-color: #000;
+  background-color: #fff;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -477,7 +474,7 @@ select {
 #viewerContainer.pdfPresentationMode:-ms-fullscreen {
   top: 0px;
   border-top: 2px solid transparent;
-  background-color: #000;
+  background-color: #fff;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -489,7 +486,7 @@ select {
 #viewerContainer.pdfPresentationMode:fullscreen {
   top: 0px;
   border-top: 2px solid transparent;
-  background-color: #000;
+  background-color: #fff;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -683,11 +680,11 @@ html[dir='rtl'] #outerContainer.sidebarOpen #viewerContainer:not(.pdfPresentatio
 #toolbarSidebar {
   width: 100%;
   height: 32px;
-  background-color: #424242; /* fallback */
-  background-image: url(images/texture.png),
+  background-color: #333; /* fallback */
+  /* background-image: url(images/texture.png),
                     -webkit-gradient(linear, left top, left bottom, from(hsla(0,0%,30%,.99)), to(hsla(0,0%,25%,.95)));
   background-image: url(images/texture.png),
-                    linear-gradient(hsla(0,0%,30%,.99), hsla(0,0%,25%,.95));
+                    linear-gradient(hsla(0,0%,30%,.99), hsla(0,0%,25%,.95)); */
 }
 html[dir='ltr'] #toolbarSidebar {
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25),
@@ -720,11 +717,11 @@ html[dir='rtl'] #sidebarResizer {
 #toolbarContainer, .findbar, .secondaryToolbar {
   position: relative;
   height: 32px;
-  background-color: #474747; /* fallback */
-  background-image: url(images/texture.png),
+  background-color: #333; /* fallback */
+  /* background-image: url(images/texture.png),
                     -webkit-gradient(linear, left top, left bottom, from(hsla(0,0%,32%,.99)), to(hsla(0,0%,27%,.95)));
   background-image: url(images/texture.png),
-                    linear-gradient(hsla(0,0%,32%,.99), hsla(0,0%,27%,.95));
+                    linear-gradient(hsla(0,0%,32%,.99), hsla(0,0%,27%,.95)); */
 }
 html[dir='ltr'] #toolbarContainer, .findbar, .secondaryToolbar {
   box-shadow: inset 0 1px 1px hsla(0,0%,0%,.15),
